styles/main.css
/* ... */
.fontweight400 {
    font-weight: 500 !important;
}

.height50 {
    height: 40vh !important;
}

#advwebForm {
    background-color: transparent !important;
}
.fbfpoptitle {
    display: none;
}
.zsfeedbkrpanel {
    background-color: transparent !important;
    border: none !important;
}
.feedbackformmdiv input, .feedbackformmdiv textarea  {
    border-radius: 10px !important;
    background-color: transparent !important;
    border: 2px solid #434343 !important;
}
#zsfeedbackwidgetdiv .dt-blue-btn {
    background: linear-gradient(300.3deg, #0575E6 9.6%, #FF0CF5 92.85%) !important;
    border-radius: 60px !important;
    height: 50px;
    width: 135px !important;
    padding: 20px 30px !important;
    font-size: 18px !important;
    line-height: 21px !important;
}

#zsfeedbackwidgetdiv .dt-blue-btn:focus {
    border: 2px solid #ffffff !important;
}

.cursorPointer {
    cursor: pointer;
}

.carousel-control-next, .carousel-control-prev {
    width: 1% !important;
}

.downloadVideo{
    position:relative;
    width: 100%;
    overflow: hidden;
    /* border-radius: 30px; */
}

.height196 {
    height: 196px !important;
}

.marginrightBtn {
    margin-right: 6.5rem;
}

.mutedTextColor {
    color: #959595;
}

.font14 {
    font-size: 12px;
    line-height: 1.5;
}

.fright {
    float: none !important;
    text-align: center !important;
    margin-top: 20px !important;
}

.feedbtxtfield, .fbtxtnf, .fbfcaptchaDivinput, .feedtxtarea {
    color: #ffffff !important;
}

.formLoader {
    background-image: url('../assets/contactUs/form-gif.gif');
    background-repeat: no-repeat;
    background-position: center;
    position: absolute;
    width: 240px;
    height: 240px;
    border-radius: 50%;
}

#zsfeedbackwidgetdiv .zsfeedbkrpanel {
    background-color: #151515 !important;
}

#zsfeedbackwidgetdiv {
    height: 30.875rem;
}

.negativeWidthMargin {
    margin-left: -240px;
}

.zsfeedbkrpanel {
    z-index: 1 !important;
}

select option {
    margin: 40px;
    background: #212123;
    color: #959595;
    font-weight: 500;
    text-shadow: 0 1px 0 #212123;
    border: none;
}

.disabledAnchor {
    pointer-events: none;
    opacity: 0.8;
}

a {
    text-decoration: none !important;
}

@media (min-width: 1400px) {
    .customPadding {
        padding-left: 2% !important;
        padding-right: 2% !important;
    }
}

@media (min-width: 2000px) {
    .customPadding {
        padding-left: 10% !important;
        padding-right: 10% !important;
    }
}

.defaultSub {
    border-radius: 60px !important;
    font-weight: 500;
    font-size: 18px !important;
    line-height: 20px !important;
    background: #212123 !important;
    color: #959595 !important;
    width: 180px;
    height: 48px;
}

@media (max-width: 480px) {
  .defaultSub {
    font-size: 14px !important;
    width: 140px;
    height: 40px;
  }  
}

.activeSub {
    background: linear-gradient(270deg, #A83AFE 0%, #6E59FE 100%) !important;
    color: #ffffff !important;
}

.subCard {
    background: #212123 !important;
    border-radius: 30px;
}

.br30 {
    border-radius: 30px !important;
    padding: 1px;
    background: #212123 !important;
}

.gradientBtn {
    background: linear-gradient(300.3deg, #0575E6 9.6%, #FF0CF5 92.85%);
    border-radius: 60px !important;
    /* height: 48px; */
}

.activeSubCard {
    background: linear-gradient(300.3deg, #0575E6 9.6%, #FF0CF5 92.85%) !important;
}

@media (max-width: 992px) {
    .btn {
        font-size: 0.6rem !important;
    }
}
@media (min-width: 992px) and (max-width: 1300px) {
    .btn {
        font-size: 0.85rem !important;
    }
}

.fbfcaptchaDivinput {
    height: 41px;
    margin-top: -30px !important;
    padding-left: 10px;
}

.FBWordVerify {
    margin: 0px !important;
}

.hidenNegativeMargin {
    overflow-x: hidden;
    padding: 0px !important;
}

.fbfcaptchaDivimg {
    overflow: hidden;
}

.alertCookieBg {
    background: linear-gradient(270deg, #8A54D0 -1.64%, #D71F7B 100%);
    font-weight: 500;
}

.borderBottomCustom {
    border-bottom: 1px solid #3E4246 !important;
}

.borderBottomCustom:focus {
    border-bottom: 1px solid #ffffff !important;
}

.wordBreak {
    word-break: break-all;
}

.height100 {
    height: 100vh;
    align-items: center;
    padding-top: 40px;
}

@media (max-width: 900px) {
    .height100{
        padding-top: 80px !important;
    }
}

@media (max-width: 1400px) {
    .container {
        max-width: 95% !important;
    }   
}
/* 
.backgroundBg {
    background-image: url('../assets/partner/Group\ 605.svg');
} */

.cardBG {
    background-color: #110D0D !important;
}

@media (min-width: 1300px) {
    .paddingX {
        padding: 0px 30px;
    }
}

.w30 {
    width: 30%;
}

.cardBlackBg {
    background-color: #110D0D !important;
    border-radius: 20px !important;
}

.negativeMarginIcon {
    margin-top: -30px;
    margin-left: -30px;
    overflow-x: hidden;
}

@media (max-width: 991px) {
    .negativeMarginIcon {
        margin-left: -75px !important;
    } 
}

@media (max-width: 575.9px) {
    .mobileLeft {
        left: 80px;
    }
}

.instaMarginIcon {
    margin-top: -30px;
    margin-left: -30px;
    overflow-x: hidden;
}

@media (max-width: 991px) {
    .instaMarginIcon {
        margin-left: -0px !important;
    }  
}

.cancelgradientText {
    background: linear-gradient(270deg, #8a54d0 -1.64%, #d71f7b 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    text-fill-color: transparent;
}

.lineBgLeft {
    background-image: url('../assets/partner/Vector\ 126.svg');
    background-repeat: no-repeat;
    background-size: contain;
}

@media (max-width: 745.9px) {
    .lineBgLeft {
        background-image: none !important;
    }

    .starBG {
        background-image: none !important;
    }

    .offset-1 {
        margin-left: 0px !important;
    }
}
/* ... */

